# web-scraping

./: .gitignore  README.md  bulk.json  crawling-catalog.md  crawling_catalog.md  mail.py  package-lock.json  pyproject.toml  requirements.txt  result.json  scrapy.cfg  start_crawl.py  test.py
developEnv/webSpider/: 1.log.json  input.json  newResult.json  new_bulk.json  new_output.json  output.json  result.json  result_raw.json
developEnv/webSpider/webSpider/: items.py  settings.py
developEnv/webSpider/webSpider/spiders/: policy.py
webSpider/: items.py  middlewares.py  pipelines.py  settings.py
webSpider/spiders/: BATCM.py  HCOHP.py  HCOSP.py  NATCM.py  SATCM.py  anhui.py  beijing.py  hebei.py  jilin.py  shaanxi.py  shanxi.py
webSpider/spiders/websites/: BATCM.py  NATCM.py
