[project]
name = "webspider"
version = "1.0.0"
description = "This is a category of spiders that scraping the data from health policy web"
authors = [{ name = "gricn", email = "gricn666@gmail.com" }]
dependencies = [
    "elasticsearch>=8.2.0",
    "scrapy>=2.6.1",
    "python-dotenv>=0.20.0",
    "schedule>=1.1.0",
    "gerapy-auto-extractor>=0.2.1",
]
requires-python = ">=3.9"
license = { text = "MIT" }
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = ["flake8>=4.0.1", "black>=22.3.0"]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
